--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,13 @@
 <head>
   <meta charset="utf-8">
-  <title>{{ site.title | xml_escape }}</title>
+
+  {% if page.title %}
+    {% if page.title == 'home' %}
+      <title>{{ site.title }}</title>
+    {% else %}
+      <title>{{ page.title | append: ' - ' | append: site.title }}</title>
+    {% endif %}
+  {% else %}
+    <title>{{ site.title }}</title>
+  {% endif %}
 </head>
