--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,11 +3,11 @@
 
   {% if page.title %}
     {% if page.title == 'home' %}
-      <title>{{ site.title }}</title>
+      <title>{{ site.title | xml_escape }}</title>
     {% else %}
-      <title>{{ page.title | append: ' - ' | append: site.title }}</title>
+      <title>{{ page.title | append: ' - ' | append: site.title | xml_escape }}</title>
     {% endif %}
   {% else %}
-    <title>{{ site.title }}</title>
+    <title>{{ site.title | xml_escape }}</title>
   {% endif %}
 </head>
