--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
     {% if page.title == 'home' %}
       <title>{{ site.title | xml_escape }}</title>
     {% else %}
-      <title>{{ page.title | append: ' - ' | append: site.title | xml_escape }}</title>
+      <title>{{ page.title | capitalize | append: ' - ' | append: site.title | xml_escape }}</title>
     {% endif %}
   {% else %}
     <title>{{ site.title | xml_escape }}</title>
