--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,4 +10,8 @@
   {% else %}
     <title>{{ site.title | xml_escape }}</title>
   {% endif %}
+
+  <meta
+    name="description"
+    content="{{ site.description | xml_escape }}">
 </head>
