`page.description` 이 있을 경우 `site.description` 대신 노출

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,13 @@
     <title>{{ site.title | xml_escape }}</title>
   {% endif %}
 
-  <meta
-    name="description"
-    content="{{ site.description | xml_escape }}">
+  {% if page.description %}
+    <meta
+      name="description"
+      content="{{ page.description | xml_escape }}">
+  {% else %}
+    <meta
+      name="description"
+      content="{{ site.description | xml_escape }}">
+  {% endif %}
 </head>
