`viewport` 메타 추가

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,8 @@
 <head>
+  <!-- Character Set -->
   <meta charset="utf-8">
 
+  <!-- Title -->
   {% if page.title %}
     {% if page.title == 'home' %}
       <title>{{ site.title | xml_escape }}</title>
@@ -11,6 +13,7 @@
     <title>{{ site.title | xml_escape }}</title>
   {% endif %}
 
+  <!-- Description -->
   {% if page.description %}
     <meta
       name="description"
@@ -20,4 +23,9 @@
       name="description"
       content="{{ site.description | xml_escape }}">
   {% endif %}
+
+  <!-- Viewport -->
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
