--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,4 +28,9 @@
   <meta
     name="viewport"
     content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+  <!-- Canonical -->
+  <link
+    rel="canonical"
+    href="{{ page.url | replace:'index.html', '' | prepend: site.baseurl | prepend: site.url }}">
 </head>
