--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,4 +33,11 @@
   <link
     rel="canonical"
     href="{{ page.url | replace:'index.html', '' | prepend: site.baseurl | prepend: site.url }}">
+
+  <!-- RSS Feed -->
+  <link
+    rel="alternate"
+    type="application/rss+xml"
+    title="RSS feed for {{ site.title | xml_escape }}"
+    href="/feed.xml">
 </head>
