`format-detection` 메타 정보 추가

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,6 +29,11 @@
     name="viewport"
     content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
+  <!-- Disable automatic phone number detection in Safari on iOS -->
+  <meta
+    name="format-detection"
+    content="telephone=no">
+
   <!-- Canonical -->
   <link
     rel="canonical"
