--- a/assets/styles/_partials/_defaults.scss
+++ b/assets/styles/_partials/_defaults.scss
@@ -11,7 +11,7 @@ html {
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
     text-size-adjust: 100%;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 body {
