--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -4,3 +4,10 @@ sitemap: false
 ---
 
 @charset "utf-8";
+
+/* Imports for all settings */
+@import "base/mixins";
+@import "base/reset";
+@import "base/variables";
+@import "base/fonts";
+@import "base/defaults";
