Set default fout style

--- a/assets/styles/_scss/base/_fonts.scss
+++ b/assets/styles/_scss/base/_fonts.scss
@@ -1,1 +1,20 @@
 @charset "utf-8";
+$fontPath: "/assets/fonts";
+
+@font-face {
+    $ns: $fontPath + "/NotoSansCJKkr-DemiLight";
+
+    font-family: "Noto Sans KR";
+    font-style: normal;
+    font-weight: 300;
+    src: url("#{$ns}.woff2") format("woff2"), url("#{$ns}.woff") format("woff"), url("#{$ns}.otf") format("opentype");
+}
+
+@font-face {
+    $ns: $fontPath + "/NotoSansCJKkr-Medium";
+
+    font-family: "Noto Sans KR";
+    font-style: normal;
+    font-weight: 500;
+    src: url("#{$ns}.woff2") format("woff2"), url("#{$ns}.woff") format("woff"), url("#{$ns}.otf") format("opentype");
+}
