--- a/assets/styles/_scss/base/_defaults.scss
+++ b/assets/styles/_scss/base/_defaults.scss
@@ -15,15 +15,13 @@ html {
 }
 
 body {
-    font-size: 1.4rem;
-    line-height: 1.2;
-    font-family: Helvetica, Arial, sans-serif;
+    font: 300 1.4rem/1.2 "Noto Sans KR", "NanumGothic", "Malgun Gothic", sans-serif;
     color: #555;
 }
 
 input,
 textarea {
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: "Noto Sans KR", "NanumGothic", "Malgun Gothic", sans-serif;
     color: #555;
 
     ::-webkit-input-placeholder {
@@ -61,9 +59,8 @@ h1,
 h2,
 h3,
 h4 {
-    font-weight: normal;
-    font-family: NanumBarunGothic, "나눔바른고딕", nanum-barun-gothic, sans-serif;
-    letter-spacing: -.02rem;
+    font-weight: 500;
+    letter-spacing: -.02em;
 }
 
 code,
