--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,4 +45,9 @@
     type="application/rss+xml"
     title="RSS feed for {{ site.title | xml_escape }}"
     href="/feed.xml">
+
+  <!-- Stylesheet -->
+  <link
+    rel="stylesheet"
+    href="{{ '/style.css' | prepend: site.path.css }}">
 </head>
