Change the defaut font and background color

--- a/assets/styles/_scss/base/_defaults.scss
+++ b/assets/styles/_scss/base/_defaults.scss
@@ -5,7 +5,7 @@
  */
 
 html {
-    background-color: #fff;
+    background-color: #212121;
     overflow-y: scroll;
     font-size: 62.5%;
     -webkit-text-size-adjust: 100%;
@@ -16,7 +16,7 @@ html {
 
 body {
     font: 300 1.4rem/1.2 "Noto Sans KR", "NanumGothic", "Malgun Gothic", sans-serif;
-    color: #555;
+    color: #b5b5b5;
 }
 
 input,
