Improve `fadein` keyframe animation

--- a/assets/styles/_scss/partials/_layout.scss
+++ b/assets/styles/_scss/partials/_layout.scss
@@ -28,11 +28,11 @@ body {
         min-width: 30rem;
         margin-top: -3rem;
         cursor: default;
+        animation: fadein 1s;
 
         h1 {
             path {
                 fill: #d86363;
-                animation: fadein 1s;
             }
         }
 
@@ -47,6 +47,7 @@ body {
 
 @keyframes fadein {
     0% {
-        opacity: 0;
+        opacity: .4;
+        transform: scale(.98);
     }
 }
